# who-infodemic-monitor

./: $null  .env.example  .gitignore  CLAUDE.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-schemas-and-infrastructure/: 01-00-PLAN.md  01-00-SUMMARY.md  01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md  01-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/routers/: jobs.py  videos.py
backend/app/core/: config.py
backend/app/core/extraction/: multimodal.py  transcription.py
backend/app/core/extraction/ocr/: text_extractor.py
backend/app/core/inference/: __init__.py
backend/app/core/inference/providers/: anthropic_provider.py  ollama_provider.py  openai_provider.py
backend/app/core/pipeline/: __init__.py
backend/app/core/schemas/: pipeline.py
backend/app/db/models/: job.py  result.py  video.py
backend/app/tests/unit/: test_config.py  test_result_model.py  test_schemas.py
backend/app/worker/: celery_app.py  tasks.py
infra/: docker-compose.yml
