[project]
name = "who-infodemic-monitor-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-multipart>=0.0.9",
  "celery>=5.3",
  "redis>=5.0",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "aiofiles>=23.0",
  "faster-whisper>=1.0.1",
  "ctranslate2>=4.3.1",
  "easyocr>=1.7.0",
  "opencv-python-headless>=4.9",
  "anthropic>=0.28",
  "openai>=1.13",
  "tiktoken>=0.6",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
